[tool.poetry]
name = "latestprice"
version = "0.1.0"
description = ""
authors = ["Przemysław Walski <przemyslaw.walski@golem.network>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.30.0"
yapapi = { git = "https://github.com/golemfactory/yapapi.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
